--- a/options/options.html
+++ b/options/options.html
@@ -10,10 +10,10 @@
 
 <body>
   <form>
-      <label>Max Tab Limit</label>
+      <label id="tab-limit-label" for="number"></label>
       <input type="number" id="tab-limit" class="browser-style">
-      <button id="save-button" class="browser-style">Save</button>
-      <button id="default-button" class="browser-style">Back to Default</button>
+      <button id="save-button" class="browser-style"></button>
+      <button id="default-button" class="browser-style"></button>
   </form>
   <script src="options.js"></script>
 </body>
