--- a/options/options.html
+++ b/options/options.html
@@ -10,10 +10,18 @@
 
 <body>
   <form>
-      <label id="tab-limit-label" for="number"></label>
-      <input type="number" id="tab-limit" class="browser-style">
-      <button id="save-button" class="browser-style"></button>
-      <button id="default-button" class="browser-style"></button>
+      <div>
+        <label id="tab-limit-label" for="tab-limit"></label>
+        <input type="number" id="tab-limit" class="browser-style">
+      </div>
+      <div>
+        <input type="checkbox" id="notify-blocked" class="browser-style">
+        <label id="notify-blocked-label" for="notify-blocked"></label>
+      </div>
+      <div style="text-align:right">
+        <button id="save-button" class="browser-style"></button>
+        <button id="default-button" class="browser-style"></button>
+      </div>
   </form>
   <script src="options.js"></script>
 </body>
