Fix mismatched "for" of a label

--- a/options/options.html
+++ b/options/options.html
@@ -10,7 +10,7 @@
 
 <body>
   <form>
-      <label id="tab-limit-label" for="number"></label>
+      <label id="tab-limit-label" for="tab-limit"></label>
       <input type="number" id="tab-limit" class="browser-style">
       <button id="save-button" class="browser-style"></button>
       <button id="default-button" class="browser-style"></button>
